# simd_vec

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
src/: chunk.rs  lib.rs  simd_vec.rs
